# ESP32-S3-Parallel-TFT-with-Touch-4.3inch

./: README.md
examples/Backlight_PWM/: Backlight_PWM.ino
examples/Clock/: Clock.ino
examples/ESP-IDF/matouch/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
examples/ESP-IDF/matouch/main/boards/: board.h
examples/ESP-IDF/matouch/main/boards/1-28-gc9a01-cst816s/: board.c  config.h
examples/ESP-IDF/matouch/main/boards/2-8-st7798v-gt911/: board.c  config.h
examples/ESP-IDF/matouch/main/boards/3-5-ili9488-ft6236/: board.c  config.h
examples/ESP-IDF/matouch/main/boards/4-3-unknown-gt911/: board.c  config.h
examples/ESP-IDF/matouch/main/boards/7-0-unknown-gt911/: board.c  config.h
examples/ESP-IDF/matouch/main/display/v8/: lcd_display.c  lcd_display.h
examples/ESP-IDF/matouch/main/display/v9/: lcd_display.c  lcd_display.h
examples/ESP-IDF/matouch/main/firmware/: template.c
examples/ESP-IDF/matouch/main/firmware/1-28-gc9a01-cst816s/: release.c
examples/ESP-IDF/matouch/main/firmware/2-8-st7798v-gt911/: release.c
examples/ESP-IDF/matouch/main/firmware/3-5-ili9488-ft6236/: release.c
examples/ESP-IDF/matouch/main/firmware/4-3-unknown-gt911/: release.c
examples/ESP-IDF/matouch/main/firmware/7-0-unknown-gt911/: release.c
examples/ESPWiFiAnalyzer/: ESPWiFiAnalyzer.ino
examples/GT911_TouchPrint/: GT911_TouchPrint.ino  TAMC_GT911.cpp
examples/ImgViewerGif/: ImgViewerGif.ino
examples/ImgViewerJpeg/: ImgViewerJpeg.ino  JpegFunc.h
examples/LovyanGFX_demo/: LGFX_ESP32S3_RGB_MakerfabsParallelTFTwithTouch43.h  LovyanGFX_demo.ino
examples/LvglBenchmark/: LvglBenchmark.ino  img_benchmark_cogwheel_alpha16.c  img_benchmark_cogwheel_argb.c  img_benchmark_cogwheel_chroma_keyed.c  img_benchmark_cogwheel_indexed16.c  img_benchmark_cogwheel_rgb.c  img_benchmark_cogwheel_rgb565a8.c  lv_demo_benchmark.h  lv_font_bechmark_montserrat_12_compr_az.c  (+2 more)
hardware/: ESP32-S3 Parallel TFT with Touch 4.3“ V1.1.brd  ESP32-S3 Parallel TFT with Touch 4.3“ V1.1.sch  ESP32-S3 Parallel TFT with Touch 4.3“ V1.3.brd  ESP32-S3 Parallel TFT with Touch 4.3“ V1.3.sch  ESP32-S3 Parallel TFT with Touch 4.3“ V2.0.brd  ESP32-S3 Parallel TFT with Touch 4.3“ V2.0.sch  ESP32-S3 Parallel TFT with Touch 4.3“ V3.1.brd  ESP32-S3 Parallel TFT with Touch 4.3“ V3.1.sch
(+47 files in other folders)
